// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill renders 1`] = `
<Pill
  id={1}
  label="mountain climbing"
>
  <div
    data-for="pill-remove"
    data-stylename="styles.pill"
    data-tip="Click to Remove"
    onClick={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      data-stylename="styles.display-label"
    >
      mountain climbing
    </span>
  </div>
</Pill>
`;

exports[`Pill renders when editable 1`] = `
<Pill
  editable={true}
  id={1}
  label="mountain climbing"
>
  <div
    data-for="pill-remove"
    data-stylename="styles.pill"
    data-tip="Click to Remove"
    onClick={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      data-stylename="styles.display-label"
    >
      mountain climbing
    </span>
    <Icon
      data-stylename="styles.remove-label"
      name="Ex"
    >
      <span
        className="icon-Ex"
        data-stylename="icon"
      />
    </Icon>
  </div>
</Pill>
`;

exports[`Pillbox renders 1`] = `
<div
  data-stylename="styles.root"
>
  <div
    data-stylename="styles.pill-container"
  >
    <CSSTransitionGroup
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={400}
      transitionLeave={true}
      transitionLeaveTimeout={300}
      transitionName={
        Object {
          "enter": undefined,
          "enterActive": undefined,
          "leave": undefined,
          "leaveActive": undefined,
        }
      }
    >
      <Pill
        id={1}
        key="1"
        label="clickable"
        onClick={[Function]}
      />
      <Pill
        id={2}
        key="2"
        label="unclickable"
      />
    </CSSTransitionGroup>
  </div>
  <ReactTooltip
    delayShow={500}
    disable={true}
    effect="solid"
    id="pill-remove"
    insecure={true}
    place="top"
    resizeHide={true}
    type="dark"
    wrapper="div"
  />
</div>
`;
